--- a/index.html
+++ b/index.html
@@ -1,69 +1,20 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Today Manager | Ponte Vedra Movers</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #020617;
-        margin: 0;
-        overflow: hidden;
-      }
-      .font-tech {
-        font-family: 'Orbitron', sans-serif;
-      }
-      ::-webkit-scrollbar {
-        width: 4px;
-      }
-      ::-webkit-scrollbar-track {
-        background: rgba(2, 6, 23, 0.5);
-      }
-      ::-webkit-scrollbar-thumb {
-        background: rgba(14, 165, 233, 0.3);
-        border-radius: 10px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: rgba(14, 165, 233, 0.5);
-      }
-      .tron-grid {
-        background-image: 
-          linear-gradient(rgba(14, 165, 233, 0.05) 1px, transparent 1px),
-          linear-gradient(90deg, rgba(14, 165, 233, 0.05) 1px, transparent 1px);
-        background-size: 50px 50px;
-      }
-      .glow-border {
-        box-shadow: 0 0 15px rgba(14, 165, 233, 0.2);
-        border: 1px solid rgba(14, 165, 233, 0.3);
-      }
-      .glow-text {
-        text-shadow: 0 0 8px rgba(14, 165, 233, 0.6);
-      }
-      .glass {
-        background: rgba(15, 23, 42, 0.7);
-        backdrop-filter: blur(8px);
-        -webkit-backdrop-filter: blur(8px);
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
-</head>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
-    <script type="module" src="/index.tsx"></script>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
